hotfix: fix hightlight tap on mobile (#hot)

--- a/static/global.css
+++ b/static/global.css
@@ -112,3 +112,10 @@ a{
 	text-decoration: none;
 	color: unset;
 }
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
